Changelog
=========

Version 1.98
	Fixed issue 105: Allow to open "gitex browse" with a given filter.
	Fixed issue 106: Show all branches which "contain" a given commit in their history.
	Fixed bug: Git Extensions crashes when opening certain repositories (e.g. linux kernel)
	After opening the FileHistory window the selected revision will be displayed.
	Only administrators can install Git Extensions.

Version 1.97
	Fixed bug: Empty local config file is saved to c:\ when not in a repository

Version 1.96
	Fixed issue 95: The colored application icons are broken.
	Fixed issue 96: System.Exception: Invalid section name: submodule
	Fixed issue 100: Adding a remote and providing a private key file will cause the .git/config file to be corrupted.
	Fixed issue 101: Searching for an Author name in Filter field makes Git Extensions crash
	Fixed issue 103: Added check when initializing repository on a file
	Fixed bug: Progress dialog could cause application to crash
	Added branch filter to advanced filter dialog
	Tweaked the graph to try to keep lanes that get merged together close to each other so there aren't as many lane crossings
	
Version 1.95
	Fixed bug: difftool only worked in git > 1.7.0
	Fixed bug: dashboard caused application to crash
	Fixed bug: refreshing gravatar that was already deleted caused an exception
	Fixed bug: when clicking "dictionary" submenu in spelling checker context menu the current word was replaced
	Fixed bug: ctrl-a in FileStatusListBox not working
	Fixed bug: starting "gitextensions init" from the commandline without path causes an exception
	Fixed bug: AccessDeniedException thrown when saving hidden .gitignore or .mailmap file
	Fixed bug: Removed empty root node from tree in file tree
	Fixed bug: If HOMEDRIVE is defined, launching Git Bash would result in a different home directory than GitExtensions
	Fixed bug: Squares where shown instead of Russian chars
	Fixed bug: Revision graph is drawn incorrect in some cases